# chip8-rust

./: Cargo.toml  Makefile  README.md
data/: test.bin.lit
src/: emulator.rs  main.rs  test.rs
src/emulator/: opcodes.rs
